fix issue - 5324 added overflow-wrap to break words if necessary

--- a/src/components/ProjectSearch.css
+++ b/src/components/ProjectSearch.css
@@ -65,7 +65,10 @@
 .project-text-search .no-result-msg {
   color: var(--theme-body-color-inactive);
   font-size: 24px;
-  padding: 4px;
+  padding: 4px 15px;
+  max-width: 100%;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 .project-text-search .file-result {
